--- a/navigation/index.html
+++ b/navigation/index.html
@@ -172,25 +172,40 @@
   </nav>
   <!-- header -->
 
-  <div class="Grey100Bg">
-    <div class="wrapper u-textCenter">
+
+
+  <main>
+    <div class="Grey200Bg">
+      <div class="blankPhone"></div>
       <div class="blankHS"></div>
-      <div class="Grid-cell">
-        <div class="element"> <img class="cardAPPOINTA" src="../Placeholder.svg" alt="New User">
-          <h1 class="">Navigation design for case study</h1>
-
-          <div class="blankHXS"></div>
-
-          <h3 class="wrapper">Please scroll down to view the behavior</h3>
-          <div class="blankHXS"></div>
+      <div class="ProjectBanner displayLaptop">
+        <div class="blankMin1880"></div>
+        <img src="Mockup.png" alt="vickywang.me">
+  
+        <div class="ProjectBannerInnerND">
+          <h1 class=""><strong>Navigation design</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
         </div>
       </div>
-
-
-
+  
+      <div class="ProjectBanner displayTablet">
+        <div class="blankMin1880"></div>
+        <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
+        <div class="ProjectBannerInnerND">
+          <h1 class=""><strong>Navigation design</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+        </div>
+      </div>
+      <div class="ProjectBanner displayPhone">
+        <div class="blankMin1880"></div>
+        <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
+        <div class="ProjectBannerInnerND">
+          <h1 class=""><strong>Navigation design</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+  
+        </div>
+      </div>
     </div>
-  </div>
-  <main>
     <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-2 wrapper">
@@ -212,7 +227,7 @@
 
           <h3><strong>Breakdown</strong></h3>
 
-          <ul >
+          <ul>
             <li class="listCircle">Able to understand the context easily</li>
             <li class="listCircle"> easily determine where the user is looking/reading </li>
             <li class="listCircle"> skip or jump to the sections they are interested in </li>
@@ -226,8 +241,8 @@
         <div class="element">
 
           <h3><strong>Duration</strong></h3>
-          <h4>June - August 2022 </h4>
-          <h4>10 Hours per week </h4>
+          <h4>April 2023 </h4>
+          <h4>5 Hours </h4>
 
         </div>
       </div>
@@ -235,7 +250,6 @@
         <div class="element">
 
           <h3><strong>Team</strong></h3>
-          <h4>Concept </h4>
           <h4>Individual work</h4>
         </div>
       </div>
@@ -243,15 +257,15 @@
         <div class="element">
 
           <h3><strong>Role</strong></h3>
-          <h4>Research</h4>
-          <h4>Visual</h4>
+          <h4>Design</h4>
+          <h4>implement</h4>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Tool</strong></h3>
-          <h4>Figma</h4>
-          <h4>VS Code</h4>
+          <h4>HTML CSS JS</h4>
+          <h4>VS Code, AWS S3</h4>
         </div>
       </div>
 
@@ -338,7 +352,8 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
-                    <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
+                      adipiscing
                       elit, sed
                       do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
@@ -457,9 +472,11 @@
                               et dolore magna aliqua. </li>
                             <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
                               ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                              eu
                               fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                              officia
                               deserunt
                               mollit anim id est laborum.</li>
                           </ul>
@@ -467,9 +484,11 @@
                           <ul>
                             <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
                               ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                              eu
                               fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                              officia
                               deserunt
                               mollit anim id est laborum.</li>
                           </ul>
@@ -538,11 +557,13 @@
                       <div class="elementInnerL cardAPPOINTA">
                         <h4> <strong> Title</strong> </h4>
                         <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore
                             et
                             dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore
                             et
                             dolore magna aliqua. </li>
@@ -555,11 +576,13 @@
                       <div class="elementInnerL cardAPPOINTA">
                         <h4> <strong> Title</strong> </h4>
                         <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore
                             et
                             dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore
                             et
                             dolore magna aliqua. </li>
