Nav - dropdown menu

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -124,23 +124,42 @@
   <!--progressBarScroll-->
   <div class="progressContainer">
     <div class="progress-container">
-      <div class="progress-bar APPOINTA" id="progressBar"></div>
+      <div class="progress-bar " id="progressBar"></div>
     </div>
   </div>
   <!--progressBarScroll-->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
+  <!-- header -->
+  <nav class="header navbarN" id="header">
+
+
+    <div class="backgroundColorNav ">
       <a href="http://vickywang.me/" class="logo pointer colorBlack">VW
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active colorBlack marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
+              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+                <div class="cardBorder GLORIFY">
+                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+                  <div class="element">
+                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                  </div>
+                </div>
+              </a>
               <a href="/seer/">
-                <div class="cardBorder SEER">
+                <div class="cardBorder SEER ">
                   <img src="../image/Cover_SEER.jpg" alt="SEER">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | For tracking business performance</h5>
+                    <h6 class="colorBlack">SEER | Track business performance</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="/appointa/">
+                <div class="cardBorder APPOINTA">
+                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <div class="element">
+                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
                 </div>
               </a>
@@ -148,13 +167,13 @@
                 <div class="cardBorder ">
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System | For vickywang.me</h5>
+                    <h6 class="colorBlack">Design System | vickywang.me</h6>
                   </div>
                 </div>
               </a>
-            </div>
-          </li>
 
+            </div>
+          </li>           
 
           <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
@@ -171,9 +190,6 @@
     </div>
   </nav>
   <!-- header -->
-
-
-
   <main>
     <div class="Grey200Bg">
       <div class="blankPhone"></div>
@@ -181,28 +197,34 @@
       <div class="ProjectBanner displayLaptop">
         <div class="blankMin1880"></div>
         <img src="Mockup.png" alt="vickywang.me">
-  
+
         <div class="ProjectBannerInnerND">
           <h1 class=""><strong>Navigation design</strong> </h1>
           <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+          <div class="blankHXS"></div>
+
         </div>
       </div>
-  
+
       <div class="ProjectBanner displayTablet">
         <div class="blankMin1880"></div>
         <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
           <h1 class=""><strong>Navigation design</strong> </h1>
           <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+          <div class="blankHXS"></div>
+
+
         </div>
       </div>
       <div class="ProjectBanner displayPhone">
         <div class="blankMin1880"></div>
         <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
-          <h1 class=""><strong>Navigation design</strong> </h1>
+          <h1 class=""><strong>Navigation Design</strong> </h1>
           <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
-  
+          <div class="blankHXS"></div>
+
         </div>
       </div>
     </div>
@@ -213,13 +235,9 @@
         <div class="element">
 
           <h3><strong>Main goal</strong></h3>
-
-
           <h4>The goal of this navigation update is to present the design thinking process in a clear and logical
             manner.
-
           </h4>
-
         </div>
       </div>
       <div class="Grid-cell">
@@ -236,6 +254,8 @@
         </div>
       </div>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="Grid Grid--gutters Grid--cols-4 wrapper">
       <div class="Grid-cell">
         <div class="element">
@@ -270,6 +290,8 @@
       </div>
 
     </div>
+    <div class="blankHS"></div>
+
 
     <nav class="HorizNav">
       <ol class="HorizNavItem">
