--- a/seer/index.html
+++ b/seer/index.html
@@ -128,11 +128,19 @@
         <ul class="nav-menu">
           <li class="dropdown nav-item active SEER marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
+              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+                <div class="cardBorder GLORIFY">
+                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+                  <div class="element">
+                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                  </div>
+                </div>
+              </a>
               <a href="/appointa/">
                 <div class="cardBorder APPOINTA">
                   <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
                   <div class="element">
-                    <h5 class="colorBlack">APPOINTA | For schedule interviews</h5>
+                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
                 </div>
               </a>
@@ -140,11 +148,20 @@
                 <div class="cardBorder ">
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System | For vickywang.me</h5>
+                    <h5 class="colorBlack">Design System | vickywang.me</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/navigation/">
+                <div class="cardBorder ">
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
                   </div>
                 </div>
               </a>
             </div>
+            
           </li>
 
 
