--- a/design_system/index.html
+++ b/design_system/index.html
@@ -126,51 +126,70 @@
     </div>
   </div>
   <!--progressBarScroll-->
-    <!-- header -->
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
-        <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
-        <div class="navbar">
+  <!-- header -->
+  <nav class="header" id="header">
+    <div class="backgroundColorNav">
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <div class="navbar">
 
-          <ul class="nav-menu">
-            <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
-              <div class="dropdown-content">
-                <a href="/appointa/">
-                  <div class="cardBorder SEER">
-                    <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
-                    <div class="element">
-                      <h5 class="colorBlack">APPOINTA | For schedule interviews</h5>
-                    </div>
+        <ul class="nav-menu">
+          <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            <div class="dropdown-content">
+              <a target="_blank"
+                href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+                <div class="cardBorder GLORIFY">
+                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+                  <div class="element">
+                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
                   </div>
-                </a>
-                <a href="/seer/">
-                  <div class="cardBorder SEER">
-                    <img src="../image/Cover_SEER.jpg" alt="SEER">
-                    <div class="element">
-                      <h5 class="colorBlack">SEER | For tracking business performance</h5>
-                    </div>
+                </div>
+              </a>
+              <a href="/seer/">
+                <div class="cardBorder SEER ">
+                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <div class="element">
+                    <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
-                </a>
-              </div>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/architecture"
-                class="nav-link box font300-1080 ">ARCHITECTURE</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/photography"
-                class="nav-link box font300-1080">PHOTOGRAPHY</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
+                </div>
+              </a>
+              <a href="/appointa/">
+                <div class="cardBorder APPOINTA">
+                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <div class="element">
+                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/navigation/">
+                <div class="cardBorder ">
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                  </div>
+                </div>
+              </a>
+
+            </div>
+          </li>
+
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- header -->
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </div>
+  </nav>
+  <!-- header -->
 
   <!-- header -->
 
@@ -182,59 +201,85 @@
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="vickywang.me">
 
-      <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
+      <div class="ProjectBannerInnerND">
+        <h1 class=""><strong>Design System</strong> </h1>
+        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
+        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
+
       </div>
     </div>
 
     <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
       <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
-      <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
-        <div class="blankHXS"></div>
+      <div class="ProjectBannerInnerND">
+        <h1 class=""><strong>Design System</strong> </h1>
+        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
+        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
+
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
       <div class="blankMin1880"></div>
       <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
-      <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
-        <div class="blankHXS"></div>
+      <div class="ProjectBannerInnerND">
+        <h1 class=""><strong>Design System</strong> </h1>
+        <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
+        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
+
     </div>
   </div>
-  <div class="blankHM"></div>
-  <!-- Title -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--center u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
-
-
-          <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.
-          </h3>
-
-          <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
-        </div>
-      </div>
-    </div>
   </div>
-  <!-- Title -->
-  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
+  <div class="blankHXS"></div>
 
+  <div class="Grid Grid--gutters Grid--cols-2 wrapper">
     <div class="Grid-cell">
       <div class="element">
-          <h3><strong>Role</strong></h3>
-          <h4>Design</h4>
-          <h4>Implement</h4>
-          <h4>Test</h4>
-          <h4>Iterate</h4>
+
+        <h3><strong>Main goal</strong></h3>
+        <h4>The objective of this design system is to effectively organize all the components on the website, making
+          them easy to locate and reuse. It also aims to categorize different types of elements, allowing for easy
+          comparison of their visual effects.
+        </h4>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+
+        <h3><strong>Breakdown</strong></h3>
+
+        <ul>
+          <li class="listCircle">Establish a responsive grid as the basis</li>
+          <li class="listCircle"> Select a typography and color palette, and make adjustments based on user feedback and other relevant factors</li>
+          <li class="listCircle"> Design and implement components, testing their behavior, and updating them as needed to ensure they work seamlessly within the system </li>
+          <li class="listCircle"> Providing a usage demonstration helps to clarify the underlying logic of a system, making it easier to compare and improve upon</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="blankHXS"></div>
+
+  <div class="Grid Grid--gutters Grid--cols-4 wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+
+        <h3><strong>Team</strong></h3>
+        <h4>Individual work</h4>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      
+      <div class="element">
+        <h3><strong>Role</strong></h3>
+        <h4>Design</h4>
+        <h4>Implement</h4>
+        <h4>Test</h4>
+        <h4>Iterate</h4>
       </div>
     </div>
     <div class="Grid-cell">
@@ -261,6 +306,7 @@
     </div>
 
   </div>
+  <div class="blankHS"></div>
 
   <div class="blankHM"></div>
   <div class="wrapper">
