fix button position absolute

--- a/glorify/index.html
+++ b/glorify/index.html
@@ -133,13 +133,21 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active GLORIFY marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
+              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+                <div class="cardBorder GLORIFY">
+                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+                  <div class="element">
+                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                  </div>
+                </div>
+              </a>
               <a href="/seer/">
-                <div class="cardBorder SEER">
+                <div class="cardBorder SEER ">
                   <img src="../image/Cover_SEER.jpg" alt="SEER">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | For tracking business performance</h5>
+                    <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
                 </div>
               </a>
@@ -147,7 +155,15 @@
                 <div class="cardBorder ">
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System | For vickywang.me</h5>
+                    <h6 class="colorBlack">Design System | vickywang.me</h6>
+                  </div>
+                </div>
+              </a>
+              <a href="/navigation/">
+                <div class="cardBorder ">
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
                   </div>
                 </div>
               </a>
@@ -174,7 +190,7 @@
   <!-- Working process -->
   <div class="colorBgGLORIFY">
     <div class="blankPhone"></div>
-    <div class="blankHS"></div>
+
     <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="APPOINTA">
