--- a/design_system/index.html
+++ b/design_system/index.html
@@ -255,9 +255,12 @@
 
         <ul>
           <li class="listCircle">Establish a responsive grid as the basis</li>
-          <li class="listCircle"> Select a typography and color palette, and make adjustments based on user feedback and other relevant factors</li>
-          <li class="listCircle"> Design and implement components, testing their behavior, and updating them as needed to ensure they work seamlessly within the system </li>
-          <li class="listCircle"> Providing a usage demonstration helps to clarify the underlying logic of a system, making it easier to compare and improve upon</li>
+          <li class="listCircle"> Select a typography and color palette, and make adjustments based on user feedback and
+            other relevant factors</li>
+          <li class="listCircle"> Design and implement components, testing their behavior, and updating them as needed
+            to ensure they work seamlessly within the system </li>
+          <li class="listCircle"> Providing a usage demonstration helps to clarify the underlying logic of a system,
+            making it easier to compare and improve upon</li>
         </ul>
       </div>
     </div>
@@ -273,7 +276,7 @@
       </div>
     </div>
     <div class="Grid-cell">
-      
+
       <div class="element">
         <h3><strong>Role</strong></h3>
         <h4>Design</h4>
@@ -1359,6 +1362,108 @@
     </div>
   </div>
   <!-- Card -->
+  <!-- slide -->
+  <div class="containerNew">
+    <div class="carouselNew">
+      <input type="radio" name="slides" checked="checked" id="slide-1">
+      <input type="radio" name="slides" id="slide-2">
+      <input type="radio" name="slides" id="slide-3">
+      <input type="radio" name="slides" id="slide-4">
+      <input type="radio" name="slides" id="slide-5">
+      <input type="radio" name="slides" id="slide-6">
+      <ul class="carousel__slides">
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1041/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Tim Marshall</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1043/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Christian Joudrey</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1044/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Steve Carter</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1045/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Aleksandra Boguslawska</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1049/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Rosan Harmens</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1052/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Annie Spratt</span>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
+      <ul class="carousel__thumbnails">
+        <li>
+          <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- slide -->
+
+
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
