--- a/glorify/index.html
+++ b/glorify/index.html
@@ -123,7 +123,7 @@
   <!--progressBarScroll-->
   <div class="progressContainer">
     <div class="progress-container">
-      <div class="progress-bar APPOINTA" id="progressBar"></div>
+      <div class="progress-bar GLORIFY" id="progressBar"></div>
     </div>
   </div>
   <!--progressBarScroll-->
@@ -133,13 +133,13 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active GLORIFY marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
-                <div class="cardBorder GLORIFY">
-                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+              <a href="/appointa/">
+                <div class="cardBorder APPOINTA">
+                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
                   <div class="element">
-                    <h6 class="colorBlack">GLORIFY | Daily worship</h6>
+                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
                 </div>
               </a>
@@ -179,9 +179,9 @@
         </ul>
       </div>
       <div class="hamburger">
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
+        <span class="bar GLORIFY"></span>
+        <span class="bar GLORIFY"></span>
+        <span class="bar GLORIFY"></span>
       </div>
     </div>
   </nav>
@@ -192,30 +192,29 @@
     <div class="blankPhone"></div>
 
     <div class="ProjectBanner displayLaptop">
-      <div class="blankMin1880"></div>
-      <img src="Mockup.png" alt="APPOINTA">
+      <img src="Mockup.png" alt="GLORIFY">
 
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
+          target="_blank"> <button class="button-35 GLORIFY">Slide Decks</button></a>
       </div>
     </div>
 
     <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
-      <img class="displayTablet" src="MockupS.png" alt="APPOINTA">
+      <img class="displayTablet" src="MockupS.png" alt="GLORIFY">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
+          target="_blank"> <button class="button-35 GLORIFY">Slide Decks</button></a>
         <div class="blankHXS"></div>
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
+      <img class="displayPhone" src="MockupXS.png" alt="GLORIFY">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
+          target="_blank"> <button class="button-35 GLORIFY">Slide Decks</button></a>
         <div class="blankHXS"></div>
 
       </div>
@@ -302,131 +301,16 @@
   </div>
 
   <div class="blankHM"></div>
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of6">
-      <div class="Grid-cell">
-        <div class="Demo">
-          <div class="elementInnerDemo content-1of6"></div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">
-          <div class="elementInnerDemo">auto</div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="colorBgGLORIFY">
-
-
-
-  </div>
-
-  <div class="containerNew">
-    <div class="carouselNew">
-      <input type="radio" name="slides" checked="checked" id="slide-1">
-      <input type="radio" name="slides" id="slide-2">
-      <input type="radio" name="slides" id="slide-3">
-      <input type="radio" name="slides" id="slide-4">
-      <input type="radio" name="slides" id="slide-5">
-      <input type="radio" name="slides" id="slide-6">
-      <ul class="carousel__slides">
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1041/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Tim Marshall</span>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1043/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Christian Joudrey</span>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1044/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Steve Carter</span>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1045/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Aleksandra Boguslawska</span>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1049/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Rosan Harmens</span>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="carousel__slide">
-          <figure>
-            <div>
-              <img src="https://picsum.photos/id/1052/800/450" alt="">
-            </div>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Annie Spratt</span>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
-      <ul class="carousel__thumbnails">
-        <li>
-          <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
-        </li>
-        <li>
-          <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
-        </li>
-        <li>
-          <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
-        </li>
-        <li>
-          <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
-        </li>
-        <li>
-          <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
-        </li>
-        <li>
-          <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
-        </li>
-      </ul>
-    </div>
-  </div>
+ 
+  
 
 
 
 
-  <div class="blankHM"></div>
+
+
+
+
 
 
 
