--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
-            <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+            <a target="_blank" href="/glorify/">
               <div class="">
                 <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
                   <img src="./image/Cover_Glorify.png" alt="GLORIFY">
