--- a/navigation/index.html
+++ b/navigation/index.html
@@ -139,7 +139,8 @@
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+
+              <a target="_blank" href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
