--- a/glorify/index.html
+++ b/glorify/index.html
@@ -227,12 +227,12 @@
       <div class="element">
         <div class="elementInnerL">
 
-          <h3><strong>Opportunity</strong></h3>
-          <h4>The recruiter's primary focus is on finding qualified candidates for the open position
-            to fill the headcount requirement. However, recruiters are spending around two-thirds of
-            their overall hiring process on scheduling interviews.
-          </h4>
-
+          <h3><strong>Context</strong></h3>
+          <h4>Glorify is a mobile application that offers a vast library of content designed to support users in their
+            spiritual journey, particularly those who follow the Christian faith. The app provides a range of resources
+            such as daily devotionals, scripture readings, prayer guides, and other faith-based content that users can
+            access at their convenience. Glorify's content is designed to be immersive and engaging, with a focus on
+            helping users deepen their spiritual connection and growth.</h4>
         </div>
       </div>
     </div>
@@ -240,14 +240,17 @@
       <div class="element">
         <div class="elementInnerL">
 
-          <h3><strong>Solution</strong></h3>
-          <h4> Provide a simple and straightforward way for recruiters to quickly and easily
-            schedule
-            interviews for both the hiring team and the candidate in order to achieve the company
-            hiring headcount requirement</h4>
+          <h3><strong>Opportunity</strong></h3>
+          <h4>Despite its rich content, Glorify has been primarily a single-player experience, lacking the community
+            engagement features that are integral to Christianity. This can limit the app's ability to fully meet the
+            user's needs for social and collaborative experiences in their faith journey.
+            To improve the user experience, I exploring ways to incorporate community engagement
+            features that align with the values of Christianity.  </h4>
+
         </div>
       </div>
     </div>
+
   </div>
 
   <div class="Grid Grid--gutters Grid--cols-4 wrapper">
@@ -256,8 +259,8 @@
         <div class="elementInnerL">
 
           <h3><strong>Duration</strong></h3>
-          <h4>June - August 2022 </h4>
-          <h4>10 Hours per week </h4>
+          <h4>April 2023 </h4>
+          <h4>20 Hours </h4>
 
         </div>
       </div>
@@ -279,7 +282,7 @@
           <h3><strong>Role</strong></h3>
           <h4>Product strategy</h4>
           <h4>Research</h4>
-          <h4>Visual</h4>
+          <h4>Design</h4>
 
 
         </div>
@@ -291,8 +294,9 @@
 
           <h3><strong>Tool</strong></h3>
           <h4>Figma</h4>
-          <h4>Photoshop</h4>
           <h4>VS Code</h4>
+          <h4>Photoshop</h4>
+
 
         </div>
       </div>
@@ -301,8 +305,8 @@
   </div>
 
   <div class="blankHM"></div>
- 
-  
+
+
 
 
 
