--- a/design_system/index.html
+++ b/design_system/index.html
@@ -204,7 +204,7 @@
       <div class="ProjectBannerInnerND">
         <h1 class=""><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
@@ -216,7 +216,7 @@
       <div class="ProjectBannerInnerND">
         <h1 class=""><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
@@ -227,7 +227,7 @@
       <div class="ProjectBannerInnerND">
         <h1 class=""><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
-        <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+        <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
 
       </div>
