--- a/glorify/index.html
+++ b/glorify/index.html
@@ -196,7 +196,8 @@
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
-          target="_blank"> <button class="button-35 GLORIFY">Slide Decks</button></a>
+          target="_blank"> <button class="button-35 GLORIFY">       
+            Slide Decks</button></a>
       </div>
     </div>
 
@@ -365,7 +366,7 @@
   <footer class="Grey100Bg">
     <div class="element">
       <div class="footer">
-        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="../../icon/mail.svg" alt="email">
