--- a/index.html
+++ b/index.html
@@ -5,27 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | Product Designer | UI/UX Designer | Projects </title>
+  <title>Vicky W. | UX Designer | Product Designer | Projects </title>
 
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
+    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, UX Designer, Designer, Architecture, Architect, UC Berkeley">
+  <meta name="author" content="Vicky W.">
 
 
 
-  <meta name="description" content="Vicky Wang's portfolio website">
+  <meta name="description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
+  <meta property='og:title' content="Vicky Wang | UX Designer | Product Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
   <meta property='og:url' content="https://vickywang.me/project" />
-  <meta property="og:site_name" content="Vicky Wang's Website">
-
-
-
-
-
+  <meta property="og:site_name" content="Vicky's Website">
 
 
   <link rel="stylesheet" href="./main.css">
@@ -194,7 +190,7 @@
               <div class="Grid-cell">
                 <strong>
                   <div class="intro">
-                    <h1> UI/UX designer &nbsp;</h1>
+                    <h1> UX designer &nbsp;</h1>
                     <span class="divider1"></span>
                     <h1> Product designer </h1>
                   </div>
@@ -247,12 +243,12 @@
     <!-- Arrow -->
     <div class="blankHS"></div>
     <!-- projects -->
-    
+
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
-            <a target="_blank" href="/glorify/">
+            <a href="/glorify/">
               <div class="">
                 <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
                   <img src="./image/Cover_Glorify.png" alt="GLORIFY">
@@ -489,7 +485,7 @@
   <footer class="Grey100Bg">
     <div class="element">
       <div class="footer">
-        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
 
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
