--- a/glorify/index.html
+++ b/glorify/index.html
@@ -259,9 +259,9 @@
       <div class="element">
         <div class="elementInnerL">
 
-          <h3><strong>Duration</strong></h3>
+          <h3><strong>Timeline</strong></h3>
           <h4>April 2023 </h4>
-          <h4>20 Hours </h4>
+          <h4>8 Hours </h4>
 
         </div>
       </div>
@@ -273,6 +273,8 @@
           <h3><strong>Team</strong></h3>
           <h4>Concept </h4>
           <h4>Individual work</h4>
+          <h4>Personal project </h4>
+
         </div>
       </div>
     </div>
